Fixed fonts and spacing

--- a/game.css
+++ b/game.css
@@ -1,76 +1,81 @@
-
 html {
-    
-    font-family: cursive;
-    text-align: center;
+font-family: cursive;
+text-align: center;
 }
 
 html, body {
-    font: italic bold 12px/30px Georgia, serif;
-    height: 100%;
-    padding: 0;
-    margin: 0;
+font: italic bold 12px/30px Georgia, serif;
+height: 100%;
+padding: 0;
+margin: 0;
 }
 
 header, main, footer, aside {
-    position: fixed;
+position: fixed;
 }
 
 header, footer {
-    font:italic bold 12px/30px Georgia, serif;
-    width: 100%;
-    height: 10%;
+font:italic bold 12px/30px Georgia, serif;
+width: 100%;
+height: 10%;
 }
 
 aside, main {
-    top: 10%;
-    height: 80%;
+top: 10%;
+height: 80%;
 }
 
 aside {
-    width: 20%;
+width: 20%;
 }
 
 aside#help {
-    left: 0;
+left: 0;
 }
 
 aside#inventory {
-    right: 0;
+right: 0;
 }
 
 main {
-    font:italic bold 12px/30px Georgia, serif;
-    width: 60%;
-    left: 20%;
-    text-align: center;
+font:italic bold 12px/30px Georgia, serif;
+width: 60%;
+left: 20%;
+text-align: center;
 }
 
 output {
-    font: 12px/30px Georgia, serif;
-    display: block;
-    margin: auto;
-    height: 50%;
-    padding: 5%;
-    border: 3px groove gray;
-    border-radius: 1em;
+font: 12px/30px Georgia, serif;
+display: block;
+margin: auto;
+height: 50%;
+padding: 5%;
+border: 3px groove gray;
+border-radius: 1em;
 }
 
 output, input {
-    font:italic bold 12px/30px Georgia, serif;
-    font-size: 250%;
-    font-family: cursive;
+font:italic bold 12px/30px Georgia, serif;
+font-size: 250%;
+font-family: cursive;
 }
 
 main > section {
-    font:italic bold 12px/30px Georgia, serif;
-    margin: 2em;
+font:italic bold 12px/30px Georgia, serif;
+margin: 2em;
 }
 
+main > output > p{
+font: bold 16px/32px Georgia, serif;
+margin: 0;
+}
 
+main > output > label{
+font: 20px/40px Impact, serif;
+margin: 2em;
+}
 
 footer {
-    font:italic bold 12px/30px Georgia, serif;
-    top: 90%;
+font:italic bold 12px/30px Georgia, serif;
+top: 90%;
 }
-
